syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "models.proto";
import "statuses.proto";
package right;

// NOT_IMPLEMENTED

service RightService {
    rpc Search (RightLookup) returns (RightLookupResponse);
}

message RightLookup
{
    google.protobuf.Int32Value rightId = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue code = 3;
    google.protobuf.Int32Value rightGroupId = 4;
}

// Comment
message RightLookupResponse
{
    repeated models.RightDto data = 1;
}